Closed
Bug 240457
Opened 22 years ago
Closed 22 years ago
remove view manager assertion
Categories
(Core :: Web Painting, defect)
Core
Web Painting
Tracking
()
RESOLVED
FIXED
People
(Reporter: roc, Assigned: roc)
Details
Attachments
(1 file)
|
766 bytes,
patch
|
dbaron
:
review+
dbaron
:
superreview+
|
Details | Diff | Splinter Review |
The assertion in SetRootView is incorrect. nsView sets the root view to null
when the root view is torn down.
| Assignee | ||
Comment 1•22 years ago
|
||
| Assignee | ||
Updated•22 years ago
|
Attachment #146066 -
Flags: superreview?(dbaron)
Attachment #146066 -
Flags: review?(dbaron)
| Assignee | ||
Comment 2•22 years ago
|
||
If you approve this, could you check it in? I'm leaving town :-)
Attachment #146066 -
Flags: superreview?(dbaron)
Attachment #146066 -
Flags: superreview+
Attachment #146066 -
Flags: review?(dbaron)
Attachment #146066 -
Flags: review+
| Assignee | ||
Comment 3•22 years ago
|
||
alright, I'll check it into the trunk. Probably not worth putting on the branch.
| Assignee | ||
Updated•22 years ago
|
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•8 years ago
|
Component: Layout: View Rendering → Layout: Web Painting
You need to log in
before you can comment on or make changes to this bug.
Description
•