Bug 240457. Kill bad view manager assertion. r+sr=dbaron